gitops/clusters/uk/prod/cluster/flux-system/teleport-components.yaml
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: teleport
  namespace: teleport
spec:
  parentRefs:
  - name: gateway
    namespace: cloudflared
  hostnames:
  - "teleport.willpxxr.com"
  - "*.teleport.willpxxr.com"
  rules:
    - backendRefs:
      - name: teleport-cluster
        port: 443
---
